--- a/src/content/team.pug
+++ b/src/content/team.pug
@@ -27,7 +27,7 @@ mixin credit(type, key)
       +credit('President', 'ashish-aggarwal')
       +credit('Vice President', 'mohit-kumar')
       +credit('General Secretary', 'puru-sharma')
-      +credit('Joint Secretary', 'abhinav-kesarvani')
+      +credit('Joint Secretary', 'abhinav-kesarwani')
       +credit('Treasurer', 'ajay-jajoo')
     h2 Developer Team
     .credits
