--- a/src/content/sponsors.pug
+++ b/src/content/sponsors.pug
@@ -31,6 +31,7 @@ mixin sponsors(title, lst)
     +sponsors('Youth Community Partner', sponsors.youth_community)
     +sponsors('Food Partners', sponsors.food)
     +sponsors('Gaming Partners', sponsors.gaming)
+    +sponsors('Amusement Partner', sponsors.amusement)
     .section.bg-white
       h2 Interested in sponsoring us?
       h3 Reach us at:
