--- a/src/content/sponsors.pug
+++ b/src/content/sponsors.pug
@@ -32,6 +32,11 @@ mixin sponsors(title, lst)
     +sponsors('Food Partners', sponsors.food)
     +sponsors('Gaming Partners', sponsors.gaming)
     +sponsors('Amusement Partner', sponsors.amusement)
+    +sponsors('Sampling Partner', sponsors.sampling)
+    +sponsors('Beauty Partner', sponsors.beauty)
+    +sponsors('Gift Partner', sponsors.gift)
+    
+    
     .section.bg-white
       h2 Interested in sponsoring us?
       h3 Reach us at:
